# AdventOfCode2024

./: .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md
day00/: CMakeLists.txt  input.h  main.cpp  part1.h  part2.h
day01/: CMakeLists.txt  input.h  main.cpp  part1.h  part2.h
day02/: CMakeLists.txt  input.h  main.cpp  part1.h  part2.h
day03/: CMakeLists.txt  input.h  main.cpp  part1.h  part2.h
day04/: CMakeLists.txt  main.cpp  part1.h  part2.h
day05/: CMakeLists.txt  main.cpp  part1.h  part2.h
day06/: CMakeLists.txt  main.cpp  part1.h
day07/: CMakeLists.txt  main.cpp  part1.h  part2.h
day08/: CMakeLists.txt  main.cpp  part1.h  part2.h
